[package]
name = "mywheel-rs"
version = "0.1.1"
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
edition = "2021"
description = "Reinventing my wheel"
readme = "README.md"
homepage = "https://luk036.github.io/mywheel-rs/"
repository = "https://github.com/luk036/mywheel-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svgbobdoc = { version = "0.3", features = ["enable"] }
