[package]
name = "mywheel-rs"
version = "0.1.2"
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
edition = "2021"
description = "Reinventing my wheel"
readme = "README.md"
homepage = "https://luk036.github.io/mywheel-rs/"
repository = "https://github.com/luk036/mywheel-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.65"

[dependencies]
svgbobdoc = { version = "0.3", features = ["enable"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
