[package]
name = "mywheel-rs"
version = "0.1.2"
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
edition = "2021"
description = "Reinventing my wheel - Custom data structures optimized for specific use cases"
readme = "README.md"
homepage = "https://luk036.github.io/mywheel-rs/"
repository = "https://github.com/luk036/mywheel-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
keywords = ["data-structures", "algorithms", "performance", "optimization"]
categories = ["data-structures", "algorithms", "no-std"]

[dependencies]
svgbobdoc = { version = "0.3", features = ["enable"] }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }

[features]
default = []
std = ["dep:env_logger", "dep:log"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"

[[bench]]
name = "benchmark_suite"
harness = false
